
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {char* p; } ;
typedef TYPE_1__* STREAM ;



void
rdp_out_unistr(STREAM s, char *string, int len)
{
 int i = 0, j = 0;

 len += 2;

 while (i < len)
 {
  s->p[i++] = string[j++];
  s->p[i++] = 0;
 }

 s->p += len;
}
